# Volsung-WebAssembly

./: .gitmodules  CMakeLists.txt  Makefile  build.sh  downloads.txt  index.html  main.cc  new.html  old.html  overview.txt  tutorial.txt
Volsung/include/: Graph.hh  Objects.hh
Volsung/src/: AudioObject.cc  Graph.cc  Objects.cc  Parser.cc
files/: chord_l  chord_r  guitar
lib/: base16-dark.css  codemirror.css
res/test_programs/: Additive_Synthesis.vlsng  Fourier_Transform.vlsng  Frequency_Modulation.vlsng  Granular_Synthesis.vlsng  Reverb.vlsng  Swarm_Generator.vlsng  Vocoder.vlsng
src/: main.cc
website/: index.html
website/lib/: codemirror.css  new.css
website/res/test_programs/: Functions.vlsng  Modal_Synthesis.vlsng
website/tabs/: api.html  deployment.js  overview.html  reference.html  reference.js  tutorial.html
